metadata while loading aggregate
